compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__patterns__alternative_patterns3.snap
---
source: compiler-core/src/erlang/tests/patterns.rs
assertion_line: 53
expression: "\npub const constant = Ok(1)\n\npub fn main(arg) {\n  let _ = constant\n  case arg {\n    _ if arg == constant -> 1\n    _ -> 0\n  }\n}\n"
---
----- SOURCE CODE

pub const constant = Ok(1)

pub fn main(arg) {
  let _ = constant
  case arg {
    _ if arg == constant -> 1
    _ -> 0
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/1]).

-file("/root/project/test/my/mod.rakun", 4).
-spec main({ok, integer()} | {error, any()}) -> integer().
main(Arg) ->
    _ = {ok, 1},
    case Arg of
        _ when Arg =:= {ok, 1} ->
            1;

        _ ->
            0
    end.
