compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__patterns__string_prefix_as_pattern_with_multiple_subjects.snap
---
source: compiler-core/src/erlang/tests/patterns.rs
expression: "pub fn a(x) {\n  case x, x {\n    _, \"a\" as a ++ _  -> a\n    _, _ -> \"a\"\n  }\n}"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([a/1]).

-file("/root/project/test/my/mod.rakun", 1).
-spec a(binary()) -> binary().
a(X) ->
    case {X, X} of
        {_, <<A:1/binary, _/binary>>} when A =:= <<"a"/utf8>> ->
            A;

        {_, _} ->
            <<"a"/utf8>>
    end.
