compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__patterns__string_prefix_as_pattern_with_multiple_subjects_and_guard.snap
---
source: compiler-core/src/erlang/tests/patterns.rs
expression: "pub fn a(x) {\n  case x, x {\n    _, \"a\" as a ++ rest if rest == \"a\" -> a\n    _, _ -> \"a\"\n  }\n}"
---
----- SOURCE CODE
pub fn a(x) {
  case x, x {
    _, "a" as a ++ rest if rest == "a" -> a
    _, _ -> "a"
  }
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([a/1]).

-file("/root/project/test/my/mod.rakun", 1).
-spec a(binary()) -> binary().
a(X) ->
    case {X, X} of
        {_, <<A:1/binary, Rest/binary>>} when (A =:= <<"a"/utf8>>) andalso (Rest =:= <<"a"/utf8>>) ->
            A;

        {_, _} ->
            <<"a"/utf8>>
    end.
